--- a/.project
+++ b/.project
@@ -35,7 +35,7 @@
 		<link>
 			<name>shared</name>
 			<type>2</type>
-			<locationURI>WORKSPACE_LOC/MyAndroidRemote-AppEngine/shared</locationURI>
+			<location>/home/jonathan/workspace/myandroidremote-appengine/shared</location>
 		</link>
 	</linkedResources>
 </projectDescription>
